--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name= ninjashop
-spring.datasource.url = jdbc:mysql://localhost:3306/ninja_shop
+spring.datasource.url = jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:3306}/${MYSQL_DATABASE:ninja_shop}
 spring.datasource.username = root
-spring.datasource.password =
+spring.datasource.password = MYSQLPASSWORD
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto = update
