--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name= ninjashop
-spring.datasource.url = jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:3306}/${MYSQL_DATABASE:ninja_shop}
-spring.datasource.username = root
-spring.datasource.password = MYSQLPASSWORD
+spring.datasource.url = jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQL_DATABASE}
+spring.datasource.username = ${MYSQLUSER}
+spring.datasource.password = ${MYSQLPASSWORD}
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto = update
