--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,2 @@
-spring.application.name= ninjashop
-spring.datasource.url = jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQL_DATABASE}
-spring.datasource.username = ${MYSQLUSER}
-spring.datasource.password = ${MYSQLPASSWORD}
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql: true
+spring.profiles.active=dev
 
