fixed  application-prod.properties for error

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,8 +6,10 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 # Hibernate Configuration for Prod
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=none  # In production, schema should be managed separately
-spring.jpa.show-sql=false  # Disable SQL logging in production
+# In production, schema should be managed separately
+spring.jpa.hibernate.ddl-auto=none
+# Disable SQL logging in production
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Logging
