--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,6 +3,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ninja_shop
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Directory to store uploaded files
+upload.folder=uploads/products
+
+
+# Enable static resource mappings
+spring.web.resources.add-mappings=true
 
 # Hibernate Configuration for Dev
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
