--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,6 +3,12 @@ spring.datasource.url = jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQL_DATABASE}
 spring.datasource.username = ${MYSQLUSER}
 spring.datasource.password = ${MYSQLPASSWORD}
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+# Directory to store uploaded files
+upload.folder=uploads/products
+
+
+# Enable static resource mappings
+spring.web.resources.add-mappings=true
 
 # Hibernate Configuration for Prod
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
