--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,7 +13,7 @@ spring.web.resources.add-mappings=true
 # Hibernate Configuration for Prod
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 # In production, schema should be managed separately
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=create
 # Disable SQL logging in production
 spring.jpa.show-sql=false
