Add reset password feature

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,9 +3,18 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ninja_shop
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#MAILER
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ammoaalinthetzaw@gmail.com
+spring.mail.password=rlxeelgugacsbuqz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 # Directory to store uploaded files
 upload.folder=uploads/products
-
+app.frontend.url=http://localhost:3000
 
 # Enable static resource mappings
 spring.web.resources.add-mappings=true
