--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,7 +5,15 @@ spring.datasource.password = ${MYSQLPASSWORD}
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 # Directory to store uploaded files
 upload.folder=uploads/products
+app.frontend.url=https://ninja-shop.vercel.app
 
+#MAILER
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ammoaalinthetzaw@gmail.com
+spring.mail.password=rlxeelgugacsbuqz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Enable static resource mappings
 spring.web.resources.add-mappings=true
