Added content from private repo

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,6 +7,10 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 upload.folder=uploads/products
 app.frontend.url=https://ninja-shop.vercel.app
 
+#Enable detailed logging in the production environment to capture the full error response
+server.error.include-message=always
+server.error.include-binding-errors=always
+
 #MAILER
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -27,5 +31,7 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Logging
-logging.level.org.springframework=INFO
-logging.level.com.ninjashop=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.com.ninjashop=DEBUG
+#logging.level.org.springframework=INFO
+#logging.level.com.ninjashop=INFO
