--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ninja_shop
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+server.error.include-message=always
+server.error.include-binding-errors=always
 #MAILER
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -26,5 +27,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Logging
-logging.level.org.springframework=DEBUG
-logging.level.com.ninjashop=DEBUG
+#logging.level.org.springframework=DEBUG
+#logging.level.com.ninjashop=DEBUG
+
+logging.level.org.springframework=INFO
+logging.level.com.ninjashop=INFO
